--- a/web/reportes/detalle_carros.jrxml
+++ b/web/reportes/detalle_carros.jrxml
@@ -1,35 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="802" pageHeight="555" orientation="Landscape" columnWidth="802" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="dec8eaba-a22b-46aa-a957-8776a761a7f6">
-	<property name="ireport.zoom" value="2.8531167061100513"/>
-	<property name="ireport.x" value="698"/>
+	<property name="ireport.zoom" value="1.1000000000000316"/>
+	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="numero" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[DECLARE @t table
-(
-    fila int,
-    --indate datetime,
-	indate varchar(10),
-    itemcode varchar(10),
-    carrito varchar(10), 
-    cat varchar(10)
-)
-INSERT INTO @t
-select dense_rank() over(order by coalesce(substring( a.lote, len(a.lote)   -13, 8),  a.itemcode)),
-convert(date,substring(a.lote, len(a.lote)   -13, 8)) as fecha_puesta, 
-case  a.itemcode when 1 then 'G' when 2 then 'J' when 3 then 'S' when 4 then 'A' when 5 then 'B' when 6 then 'C' else 'D' end as itemcode, 
-substring(a.lote, len(a.lote)   -21, 7) as nro_carrito,  substring(lote, len(a.lote) - 4, 3) as categoria
-from 
-
-embarque_det a inner join lotes b on a.lote=b.cod_lote
-
-where  a.id_cab=$P{numero} and a.cantidad=4320 and b.codigo_borroso='NO'
- 
-SELECT fila, indate, itemcode, cat,
-stuff((    SELECT [carrito] + '   '  FROM @t WHERE fila = t.fila and indate = t.indate and itemcode = t.itemcode FOR XML PATH('')),1,0,'') as carros
-FROM (SELECT DISTINCT fila, indate, itemcode, cat FROM @t ) t]]>
+		<![CDATA[exec [rep_embarque_carros] @cod_interno=$P{numero}]]>
 	</queryString>
 	<field name="fila" class="java.lang.Integer"/>
 	<field name="indate" class="java.lang.String"/>
@@ -156,7 +134,7 @@ FROM (SELECT DISTINCT fila, indate, itemcode, cat FROM @t ) t]]>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="42" splitType="Stretch">
+		<band height="25" splitType="Stretch">
 			<textField pattern="dd/MM/yy">
 				<reportElement x="-1" y="1" width="69" height="19" uuid="87b9321c-7536-4f94-b75c-094dd7a17fab"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
@@ -179,25 +157,25 @@ FROM (SELECT DISTINCT fila, indate, itemcode, cat FROM @t ) t]]>
 				<textFieldExpression><![CDATA[$F{cat}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="133" y="0" width="1" height="40" uuid="deb36419-0e99-4173-b949-a11c9d6d204d"/>
+				<reportElement stretchType="RelativeToBandHeight" x="133" y="0" width="1" height="23" uuid="deb36419-0e99-4173-b949-a11c9d6d204d"/>
 			</line>
 			<line>
-				<reportElement x="90" y="0" width="1" height="40" uuid="37332800-5ded-4192-aee5-a64f31181411"/>
+				<reportElement stretchType="RelativeToBandHeight" x="90" y="0" width="1" height="23" uuid="37332800-5ded-4192-aee5-a64f31181411"/>
 			</line>
 			<line>
-				<reportElement x="68" y="0" width="1" height="40" uuid="1a1eb91b-c2c2-41c2-8852-ca926ec7df93"/>
+				<reportElement stretchType="RelativeToBandHeight" x="68" y="0" width="1" height="23" uuid="1a1eb91b-c2c2-41c2-8852-ca926ec7df93"/>
 			</line>
 			<line>
-				<reportElement x="0" y="0" width="1" height="40" uuid="48be9a7e-80ae-47a7-a040-c7adb4577646"/>
+				<reportElement stretchType="RelativeToBandHeight" x="0" y="0" width="1" height="23" uuid="48be9a7e-80ae-47a7-a040-c7adb4577646"/>
 			</line>
 			<line>
-				<reportElement x="802" y="0" width="1" height="42" uuid="d4ee091f-b04c-49c2-a564-bcf9629b9911"/>
+				<reportElement stretchType="RelativeToBandHeight" x="802" y="0" width="1" height="22" uuid="d4ee091f-b04c-49c2-a564-bcf9629b9911"/>
 			</line>
 			<line>
-				<reportElement x="0" y="40" width="802" height="1" uuid="9b77c180-e32e-4674-9fb2-155f5b474f04"/>
+				<reportElement positionType="FixRelativeToBottom" x="0" y="23" width="802" height="1" uuid="9b77c180-e32e-4674-9fb2-155f5b474f04"/>
 			</line>
 			<line>
-				<reportElement x="500" y="1" width="1" height="38" uuid="78942ab9-2d9d-4355-b452-c0792d72b1cb"/>
+				<reportElement stretchType="RelativeToBandHeight" x="500" y="1" width="1" height="21" uuid="78942ab9-2d9d-4355-b452-c0792d72b1cb"/>
 			</line>
 			<textField pattern="dd/MM/yy">
 				<reportElement x="415" y="1" width="59" height="20" uuid="bea09956-d61a-4518-b9ee-8be41fe5658a"/>
@@ -220,35 +198,35 @@ FROM (SELECT DISTINCT fila, indate, itemcode, cat FROM @t ) t]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{itemcode}]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement x="546" y="1" width="255" height="38" uuid="fe91cec6-ee0b-40cc-8070-f141237e0b23"/>
+			<textField isStretchWithOverflow="true">
+				<reportElement x="545" y="1" width="256" height="22" uuid="fe91cec6-ee0b-40cc-8070-f141237e0b23"/>
 				<textElement>
-					<font size="8" isBold="true"/>
+					<font size="9" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{carros}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="476" y="0" width="1" height="40" uuid="d02ee587-8fbe-4d82-b215-a683f3596f6d"/>
+				<reportElement stretchType="RelativeToBandHeight" x="476" y="0" width="1" height="23" uuid="d02ee587-8fbe-4d82-b215-a683f3596f6d"/>
 			</line>
 			<line>
-				<reportElement x="543" y="1" width="1" height="39" uuid="812cd849-c0ee-4e00-be6c-bb271e2938f5"/>
+				<reportElement stretchType="RelativeToBandHeight" x="543" y="1" width="1" height="22" uuid="812cd849-c0ee-4e00-be6c-bb271e2938f5"/>
 			</line>
 			<line>
-				<reportElement x="401" y="-45" width="1" height="86" uuid="25bc9e86-39d1-428d-b848-a52703cd2d63"/>
+				<reportElement stretchType="RelativeToBandHeight" x="401" y="-45" width="1" height="69" uuid="25bc9e86-39d1-428d-b848-a52703cd2d63"/>
 				<graphicElement>
 					<pen lineStyle="Dotted"/>
 				</graphicElement>
 			</line>
 			<line>
-				<reportElement x="390" y="-46" width="1" height="86" uuid="3b7b662e-4ce2-40b7-afc0-9758ed0e0be4"/>
+				<reportElement stretchType="RelativeToBandHeight" x="390" y="-46" width="1" height="69" uuid="3b7b662e-4ce2-40b7-afc0-9758ed0e0be4"/>
 			</line>
 			<line>
-				<reportElement x="414" y="0" width="1" height="39" uuid="56ac93f4-bbfe-483b-95bc-d286a4a10010"/>
+				<reportElement stretchType="RelativeToBandHeight" x="414" y="0" width="1" height="22" uuid="56ac93f4-bbfe-483b-95bc-d286a4a10010"/>
 			</line>
-			<textField>
-				<reportElement x="134" y="0" width="256" height="39" uuid="96094533-1c47-4e24-9b96-cd41a89b54ed"/>
-				<textElement>
-					<font size="8" isBold="true"/>
+			<textField isStretchWithOverflow="true">
+				<reportElement x="134" y="1" width="256" height="22" uuid="96094533-1c47-4e24-9b96-cd41a89b54ed"/>
+				<textElement verticalAlignment="Top">
+					<font size="9" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{carros}]]></textFieldExpression>
 			</textField>
